--- a/script/Hands-on_III.ipynb
+++ b/script/Hands-on_III.ipynb
@@ -66,7 +66,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from climada import ENT_TEST_XLS\n",
+    "import os\n",
+    "from climada import DATA_DIR\n",
+    "ENT_TEST_XLS = os.path.join(DATA_DIR, 'test', 'demo_today.xlsx')\n",
     "print(ENT_TEST_XLS)"
    ]
   },
@@ -742,7 +744,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
