add explanations in impact section. adapt to renames in code.

--- a/script/Hands-on_I.ipynb
+++ b/script/Hands-on_I.ipynb
@@ -250,7 +250,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are two `ANDREW` events in Florida:"
+    "There are two events called `ANDREW` in Florida:"
    ]
   },
   {
@@ -314,9 +314,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The impact of hazard events over an entity can be computed easily from the previously explained classes. The `Impact` class computes this information.\n",
+    "The impact of hazard events over an entity can be computed easily from the previously explained classes. By computing the impact for each event, the `Impact` class provides different risk measures, as the expected annual impact per exposure, the probable maximum impact for different return periods and the total average annual impact.\n",
     "\n",
-    "This is the impact from ANDREW tropical cyclone and its probabilistic events:"
+    "This is the impact of scenario ANDREW in Florida. We call scenario to the historical event and its synthetic reproductions. Analyzing the scenario instead of the single historical event enables to take into account the uncertainties of such events."
    ]
   },
   {
@@ -329,14 +329,15 @@
     "imp_andrew = Impact()\n",
     "# Compute impact of hurricane Andrew in tc_andrew over Florida entity:\n",
     "imp_andrew.calc(ent_fl.exposures, ent_fl.impact_funcs, tc_andrew)\n",
-    "imp_andrew.plot_at_exposure(); # accumulated losses for each exposure"
+    "imp_andrew.plot_eai_exposure(); # average annual impact at each exposure\n",
+    "print('Expected average annual impact of an ANDREW scenario:', imp_andrew.aai_agg)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is the impact exceedence frequency curve of all the historical and synthetic events over Florida:"
+    "If we take into account all the historical and synthetic events of tropical cyclones in Florida, the impact exceedence frequency curve can be computed and a reliable approximation of the average annual impact (aggregated) is obtained:"
    ]
   },
   {
@@ -352,7 +353,24 @@
     "# Compute impact over Florida:\n",
     "imp_fl.calc(ent_fl.exposures, ent_fl.impact_funcs, tc_fl)\n",
     "freq_curve_fl = imp_fl.calc_freq_curve() # impact exceedence frequency curve\n",
-    "freq_curve_fl.plot();"
+    "freq_curve_fl.plot();\n",
+    "print('Expected average annual impact:', imp_fl.aai_agg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The average annual impact per exposure is:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imp_fl.plot_eai_exposure(); # average annual impact at each exposure"
    ]
   },
   {
