remove input centroids in set_random_walk.

--- a/script/Hands-on_I.ipynb
+++ b/script/Hands-on_I.ipynb
@@ -224,7 +224,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tc_andrew.set_random_walk(centroids=cent_fl)\n",
+    "tc_andrew.set_random_walk()\n",
     "print('Number of tracks:', len(tc_andrew.tracks))\n",
     "tc_andrew.plot_tracks() # Blue lines represent historical events, black synthetic"
    ]
