Update script according to changes in functions names.

--- a/script/workshop_I/Hands-on_I.ipynb
+++ b/script/workshop_I/Hands-on_I.ipynb
@@ -243,7 +243,8 @@
    "outputs": [],
    "source": [
     "from climada import HAZ_DEMO_MAT\n",
-    "tc_fl = TropCyclone(HAZ_DEMO_MAT, 'Historic and synthetic tropical cyclones in Florida from 1851 to 2011.')"
+    "tc_fl = TropCyclone()\n",
+    "tc_fl.read(HAZ_DEMO_MAT, 'Historic and synthetic tropical cyclones in Florida from 1851 to 2011.')"
    ]
   },
   {
@@ -259,8 +260,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('The first ANDREW happened in', tc_fl.get_date_strings('ANDREW')[0])\n",
-    "print('The second ANDREW happened in', tc_fl.get_date_strings('ANDREW')[1])\n",
+    "print('The first ANDREW happened in', tc_fl.get_event_date('ANDREW')[0])\n",
+    "print('The second ANDREW happened in', tc_fl.get_event_date('ANDREW')[1])\n",
     "tc_fl.plot_intensity(event='ANDREW'); # Plot all ANDREW events"
    ]
   },
@@ -293,7 +294,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tc_fl.plot_stats();"
+    "tc_fl.plot_rp_intensity();"
    ]
   },
   {
