--- a/script/workshop_I/Hands-on_II.ipynb
+++ b/script/workshop_I/Hands-on_II.ipynb
@@ -495,8 +495,8 @@
    "source": [
     "# SOLUTION:\n",
     "new_inten = np.linspace(0, 100, num=20)\n",
-    "new_mdd = imp_fun.interpolate(new_inten, 'mdd')\n",
-    "new_paa = imp_fun.interpolate(new_inten, 'paa')"
+    "new_mdd = np.interp(new_inten, imp_fun.intensity, imp_fun.mdd)\n",
+    "new_paa = np.interp(new_inten, imp_fun.intensity, imp_fun.paa)"
    ]
   },
   {
