--- a/script/workshop_I/Hands-on_IV.ipynb
+++ b/script/workshop_I/Hands-on_IV.ipynb
@@ -64,7 +64,7 @@
    "outputs": [],
    "source": [
     "help(haz_tc_fl.plot_intensity)\n",
-    "help(haz_tc_fl.plot_stats)"
+    "help(haz_tc_fl.plot_rp_intensity)"
    ]
   },
   {
@@ -113,7 +113,7 @@
     "haz_tc_fl.plot_intensity(event='HAZEL', cmap='BuGn') # setting color map\n",
     "\n",
     "# 4. tropical cyclone intensities maps for the return periods [10, 50, 75, 100]\n",
-    "_, _, res = haz_tc_fl.plot_stats([10, 50, 75, 100])\n",
+    "_, _, res = haz_tc_fl.plot_rp_intensity([10, 50, 75, 100])\n",
     "\n",
     "# 5. intensities of all the events in centroid with id 50\n",
     "haz_tc_fl.plot_intensity(centr=50)\n",
@@ -161,8 +161,8 @@
     "# SOLUTION:\n",
     "\n",
     "# 1. How many hurricanes with the name `HAZEL` have happened in Florida? When did they take place?\n",
-    "print('Number of events HAZEL:', haz_tc_fl.event_name_to_id('HAZEL').size)\n",
-    "print('Occurence of events HAZEL:', haz_tc_fl.get_date_strings('HAZEL'))\n",
+    "print('Number of events HAZEL:', haz_tc_fl.get_event_id('HAZEL').size)\n",
+    "print('Occurence of events HAZEL:', haz_tc_fl.get_event_date('HAZEL'))\n",
     "\n",
     "# 2. Which is the year where more tropical cyclones have occured?\n",
     "# First we compute the events per year\n",
@@ -507,6 +507,8 @@
     "from climada import DATA_DIR\n",
     "BRB_TRACK = os.path.join(DATA_DIR, 'test', \"trac_brb_test.csv\")\n",
     "# Put your code here:\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
@@ -531,7 +533,7 @@
     "# The start date of the events are stored in the Hazard.date variable (without time).\n",
     "# To change from ordinal format to date, we can use the datetime package\n",
     "import datetime as dt\n",
-    "print('Date:', tc_haz_brb.get_date_strings())\n",
+    "print('Date:', tc_haz_brb.get_event_date())\n",
     "# Since we also have the track information, we can check it in the tracks Dataset\n",
     "print('Date and time:', tc_haz_brb.tracks[0].time[0].values)"
    ]
@@ -573,7 +575,7 @@
     "\n",
     "tc_haz_brb = TropCyclone()\n",
     "tc_haz_brb.set_from_tracks(BRB_TRACK, centroids=cent_brb)\n",
-    "tc_haz_brb.set_random_walk(ens_size=9, centroids=cent_brb)\n",
+    "tc_haz_brb.set_random_walk(ens_size=9)\n",
     "# Check that the data is consistent\n",
     "tc_haz_brb.check()\n",
     "print('Total number of events:', tc_haz_brb.event_id.size)\n",
@@ -610,7 +612,8 @@
    "source": [
     "# SOLUTION:\n",
     "from climada import HAZ_DEMO_MAT\n",
-    "tc_haz = TropCyclone(HAZ_DEMO_MAT)\n",
+    "tc_haz = TropCyclone()\n",
+    "tc_haz.read(HAZ_DEMO_MAT)\n",
     "print('Number of historical events:', tc_haz.orig.nonzero()[0].size)"
    ]
   }
