Correct test data paths.

--- a/script/workshop_I/Hands-on_III.ipynb
+++ b/script/workshop_I/Hands-on_III.ipynb
@@ -67,8 +67,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "from climada import DATA_DIR\n",
-    "ENT_TEST_XLS = os.path.join(DATA_DIR, 'test', 'demo_today.xlsx')\n",
+    "from climada import SOURCE_DIR\n",
+    "ENT_TEST_XLS = os.path.join(SOURCE_DIR, 'entity/test/data', 'demo_today.xlsx')\n",
     "print(ENT_TEST_XLS)"
    ]
   },
@@ -657,7 +657,7 @@
    "source": [
     "### EXERCISE\n",
     "\n",
-    "Read, append and plot the following two centroids files: `HAZ_DEMO_MAT` and `DATA_DIR` + '/test/centr_brb_test.mat'."
+    "Read, append and plot the following two centroids files: `HAZ_DEMO_MAT` and `BRB_CENT`."
    ]
   },
   {
@@ -666,8 +666,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from climada import HAZ_DEMO_MAT, DATA_DIR\n",
-    "BRB_CENT = DATA_DIR + '/test/centr_brb_test.mat'\n",
+    "from climada import HAZ_DEMO_MAT, SOURCE_DIR\n",
+    "BRB_CENT = os.path.join(SOURCE_DIR, 'hazard/centroids/test/data', 'centr_brb_test.mat')\n",
     "\n",
     "# Put your code here\n",
     "\n",
@@ -682,8 +682,8 @@
    "outputs": [],
    "source": [
     "# SOLUTION:\n",
-    "from climada import HAZ_DEMO_MAT, DATA_DIR\n",
-    "BRB_CENT = DATA_DIR + '/test/centr_brb_test.mat'\n",
+    "from climada import HAZ_DEMO_MAT, SOURCE_DIR\n",
+    "BRB_CENT = os.path.join(SOURCE_DIR, 'hazard/centroids/test/data', 'centr_brb_test.mat')\n",
     "\n",
     "# Option 1: Read individually and append\n",
     "fl_centr = Centroids(HAZ_DEMO_MAT)\n",
