--- a/script/workshop_I/Hands-on_IV.ipynb
+++ b/script/workshop_I/Hands-on_IV.ipynb
@@ -327,9 +327,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from climada import DATA_DIR\n",
+    "from climada import SOURCE_DIR\n",
     "import os\n",
-    "BRB_TRACK = os.path.join(DATA_DIR, 'test', \"trac_brb_test.csv\")\n",
+    "BRB_TRACK = os.path.join(SOURCE_DIR, 'hazard/test/data', 'trac_brb_test.csv')\n",
     "\n",
     "# Put your code here\n",
     "\n",
@@ -343,10 +343,10 @@
    "outputs": [],
    "source": [
     "# SOLUTION:\n",
-    "from climada import DATA_DIR\n",
+    "from climada import SOURCE_DIR\n",
     "import os\n",
-    "# 1.Read \"trac_brb_test.csv\" file containing a tropical cyclone track in Barbados. \n",
-    "BRB_TRACK = os.path.join(DATA_DIR, 'test', \"trac_brb_test.csv\")\n",
+    "# 1.Read \"trac_brb_test.csv\" file containing a tropical cyclone track in Barbados.\n",
+    "BRB_TRACK = os.path.join(SOURCE_DIR, 'hazard/test/data', 'trac_brb_test.csv')\n",
     "tc_track_brb = trop_cyclone.read_ibtracs(BRB_TRACK)\n",
     "tc_track_brb"
    ]
@@ -504,8 +504,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "from climada import DATA_DIR\n",
-    "BRB_TRACK = os.path.join(DATA_DIR, 'test', \"trac_brb_test.csv\")\n",
+    "from climada import SOURCE_DIR\n",
+    "BRB_TRACK = os.path.join(SOURCE_DIR, 'hazard/test/data', 'trac_brb_test.csv')\n",
     "# Put your code here:\n",
     "\n",
     "\n",
@@ -520,8 +520,8 @@
    "source": [
     "# SOLUTION:\n",
     "import os\n",
-    "from climada import DATA_DIR\n",
-    "BRB_TRACK = os.path.join(DATA_DIR, 'test', \"trac_brb_test.csv\")\n",
+    "from climada import SOURCE_DIR\n",
+    "BRB_TRACK = os.path.join(SOURCE_DIR, 'hazard/test/data', 'trac_brb_test.csv')\n",
     "\n",
     "# When setting a tropical cyclone from a track, this can not be done at contruction\n",
     "tc_haz_brb = TropCyclone()\n",
@@ -567,9 +567,9 @@
    "source": [
     "# SOLUTION:\n",
     "import os\n",
-    "from climada import DATA_DIR, Centroids\n",
-    "BRB_CENT = DATA_DIR + '/test/centr_brb_test.mat'\n",
-    "BRB_TRACK = os.path.join(DATA_DIR, 'test', \"trac_brb_test.csv\")\n",
+    "from climada import SOURCE_DIR, Centroids\n",
+    "BRB_CENT = os.path.join(SOURCE_DIR, 'hazard/centroids/test/data', 'centr_brb_test.mat')\n",
+    "BRB_TRACK = os.path.join(SOURCE_DIR, 'hazard/test/data', 'trac_brb_test.csv')\n",
     "\n",
     "cent_brb = Centroids(BRB_CENT)\n",
     "\n",
