Define TCTracks class to handle the tropical cyclone tracks.

--- a/script/workshop_I/Hands-on_I.ipynb
+++ b/script/workshop_I/Hands-on_I.ipynb
@@ -187,7 +187,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tropical cyclones can be modelled from historical event tracks, in particular from [IBTrACS](https://www.ncdc.noaa.gov/ibtracs/) data. `TC_ANDREW_FL` file contains the IBrTRACS track of hurricane Andrew in 1992 over Florida."
+    "Tropical cyclones can be modelled from historical event tracks, in particular from [IBTrACS](https://www.ncdc.noaa.gov/ibtracs/) data. The tracks can be loaded and manipulated with `TCTracks` class. This generates as well synthetic events from the historical ones. \n",
+    "\n",
+    "`TC_ANDREW_FL` file contains the IBrTRACS track of hurricane Andrew in 1992 over Florida."
    ]
   },
   {
@@ -196,7 +198,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from climada import TropCyclone, TC_ANDREW_FL"
+    "from climada import TCTracks, TropCyclone, TC_ANDREW_FL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "track_andrew = TCTracks()\n",
+    "track_andrew.read_ibtracs_csv(TC_ANDREW_FL)\n",
+    "track_andrew.plot() # plot track\n",
+    "\n",
+    "# Generate synthetic events\n",
+    "track_andrew.calc_random_walk()\n",
+    "track_andrew.interpolate_time()\n",
+    "track_andrew.plot() # Blue lines represent historical events, black synthetic\n",
+    "print('Number of tracks:', track_andrew.size())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`TropCyclone` class ingests the tracks and models the wind gusts in the provided centroids."
    ]
   },
   {
@@ -206,27 +232,8 @@
    "outputs": [],
    "source": [
     "tc_andrew = TropCyclone() # instance TropCyclone\n",
-    "tc_andrew.set_from_tracks(TC_ANDREW_FL, centroids=cent_fl) # set hazard from track file with given centroids\n",
-    "tc_andrew.plot_tracks()                            # plot track\n",
-    "tc_andrew.plot_intensity(tc_andrew.event_name[0]); # plot intensity of the hazard"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Synthetic events from the historical events can be generated in a `TropCyclone`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tc_andrew.set_random_walk()\n",
-    "print('Number of tracks:', len(tc_andrew.tracks))\n",
-    "tc_andrew.plot_tracks() # Blue lines represent historical events, black synthetic"
+    "tc_andrew.set_from_tracks(track_andrew, centroids=cent_fl) # set hazard from track file with given centroids\n",
+    "tc_andrew.plot_intensity(tc_andrew.event_name[0]); # plot intensity of one event"
    ]
   },
   {
@@ -331,7 +338,7 @@
     "# Compute impact of hurricane Andrew in tc_andrew over Florida entity:\n",
     "imp_andrew.calc(ent_fl.exposures, ent_fl.impact_funcs, tc_andrew)\n",
     "imp_andrew.plot_eai_exposure(); # average annual impact at each exposure\n",
-    "print('Expected average annual impact of an ANDREW scenario:', imp_andrew.aai_agg)"
+    "print('Expected average annual impact of an ANDREW scenario:', imp_andrew.aai_agg, imp_andrew.unit)"
    ]
   },
   {
