--- a/script/workshop_I/Hands-on_IV.ipynb
+++ b/script/workshop_I/Hands-on_IV.ipynb
@@ -54,7 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It has three different plot functions: `plot_intensity()`, `plot_fraction()`and `plot_stats()`. Depending on the inputs, different properties can be visualized. Check the documentation of a function:"
+    "It has three different plot functions: `plot_intensity()`, `plot_fraction()`and `plot_rp_intensity()`. Depending on the inputs, different properties can be visualized. Check the documentation of a function:"
    ]
   },
   {
@@ -174,9 +174,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tropical Cyclone tracks\n",
+    "# TCTracks\n",
     "\n",
-    "The `trop_cyclone` module contains the definition of the `TropCyclone` class and functions to read and deal with tropical cyclone tracks of the [IBTrACS](https://www.ncdc.noaa.gov/ibtracs/) repository. Executing the help function on the module all the classes and public functions of the module are described."
+    "The `trop_cyclone` module contains the definition of the `TCTracks` class which reads and deals with tropical cyclone tracks of the [IBTrACS](https://www.ncdc.noaa.gov/ibtracs/) repository."
    ]
   },
   {
@@ -185,17 +185,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from climada import trop_cyclone\n",
-    "help(trop_cyclone)"
+    "from climada import TCTracks\n",
+    "help(TCTracks)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The functions `read_ibtracs()`, `interp_track()`, `calc_random_walk()` and `gust_from_track()` deal directly with tracks, without having to deal with the `TropCyclone` class. At higher level, however, it's more convenient to let the `TropCyclone` class (explained [below](#TropCyclone-class)) to deal with all those functions automatically. \n",
-    "\n",
-    "A tropical cyclone track information is stored in a `Dataset` of the xarray library."
+    "A tropical cyclone track information is stored in a `Dataset` of the xarray library. `TCTracks` class just contains the different `Datasets` of the tracks and methods to build them and operate over them. "
    ]
   },
   {
@@ -309,7 +307,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Back to Tropical Cyclone tracks"
+    "## Back to TCTracks"
    ]
   },
   {
@@ -318,7 +316,7 @@
    "source": [
     "### EXERCISE\n",
     "\n",
-    "Read \"trac_brb_test.csv\" file containing a tropical cyclone track in Barbados. \n"
+    "Read \"trac_brb_test.csv\" file containing a tropical cyclone track in Barbados. Use the `TCTracks`.\n"
    ]
   },
   {
@@ -347,8 +345,9 @@
     "import os\n",
     "# 1.Read \"trac_brb_test.csv\" file containing a tropical cyclone track in Barbados.\n",
     "BRB_TRACK = os.path.join(SOURCE_DIR, 'hazard/test/data', 'trac_brb_test.csv')\n",
-    "tc_track_brb = trop_cyclone.read_ibtracs(BRB_TRACK)\n",
-    "tc_track_brb"
+    "tc_track_brb = TCTracks()\n",
+    "tc_track_brb.read_ibtracs_csv(BRB_TRACK)\n",
+    "tc_track_brb.get_track()"
    ]
   },
   {
@@ -368,7 +367,8 @@
     "\n",
     "1. Which is the time frequency of the data?\n",
     "2. Compute the maximum sustained wind for each day.\n",
-    "3. Linearly interpolate the Dataset's data to a frequency of 1 hour."
+    "3. Linearly interpolate the Dataset's data to a frequency of 1 hour.\n",
+    "4. Plot the track."
    ]
   },
   {
@@ -391,12 +391,15 @@
    "source": [
     "# SOLUTION:\n",
     "import numpy as np\n",
+    "# select the track\n",
+    "track_brb = tc_track_brb.get_track()\n",
+    "\n",
     "# 1. Which is the time frequency of the data?\n",
     "# Since there are few elements, one can see with the naked eye that the frequence is 6 hours\n",
     "# It can also be computed:\n",
     "# The values of a DataArray are numpy.arrays. \n",
     "# The nummpy.ediff1d computes the different between elements in an array\n",
-    "diff_time_ns = np.ediff1d(tc_track_brb.time)\n",
+    "diff_time_ns = np.ediff1d(track_brb.time)\n",
     "# pint library would offer a more elegant solution, as shown below\n",
     "diff_time_h = diff_time_ns.astype(int)/1000/1000/1000/60/60\n",
     "print('Mean time frequency in hours:', diff_time_h.mean())\n",
@@ -404,14 +407,49 @@
     "print()\n",
     "\n",
     "# 2. Compute the maximum sustained wind for each day.\n",
-    "print('Daily max sustained wind:', tc_track_brb.max_sustained_wind.groupby('time.day').max())\n",
+    "print('Daily max sustained wind:', track_brb.max_sustained_wind.groupby('time.day').max())\n",
     "print()\n",
     "\n",
     "# 3. Linearly interpolate the Dataset's data to a frequency of 1 hour.\n",
     "# Most of Pandas DataFrame functionalities work for xarray Dataset. For example, the resample method:\n",
     "#https://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.resample.html   \n",
     "print('Interpolated Dataset:')\n",
-    "tc_track_brb.resample(time='1H').interpolate('linear')"
+    "print(track_brb.resample(time='1H').interpolate('linear'))\n",
+    "\n",
+    "# 4. Plot\n",
+    "tc_track_brb.plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### EXERCISE\n",
+    "\n",
+    "Generate 10 synthetic tracks from the previous one. Plot them all."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Put your code here\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SOLUTION:\n",
+    "tc_track_brb.calc_random_walk()\n",
+    "tc_track_brb.plot()\n"
    ]
   },
   {
@@ -425,7 +463,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pint ia a package to define, operate and manipulate physical quantities: the product of a numerical value and a unit of measurement. \n",
+    "Pint is a package to define, operate and manipulate physical quantities: the product of a numerical value and a unit of measurement. \n",
     "\n",
     "Example: The change of unit from ns to hours performed in the previous exercise can be done with pint, avoiding to use hardcoded numbers in your code and defining all the variables for changes of units."
    ]
@@ -469,9 +507,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `TropCyclone` class is a derived class of `Hazard`. As such, it contains all the attributes and methods of a `Hazard`. Additionally, it contains the `tracks` variable, which is used to fill the TC tracks, if provided. \n",
-    "\n",
-    "Currently it contains three additional methods: `set_from_track()`, `set_random_walk()` and `plot_tracks()`. The first is used to fill the `TropCyclone` attributes from a IBTrACS track file (in csv format). The second generates synthetic tracks from the historical ones and computes the new hazard events from these tracks. The third is used to plot the `tracks` variable.\n",
+    "The `TropCyclone` class is a derived class of `Hazard`. As such, it contains all the attributes and methods of a `Hazard`. Additionally, it contains the method `set_from_track()` to model tropical cyclones from tracks of events contrined in a `TCTracks` instance. \n",
     "\n",
     "When setting a tropical cyclone from a track, the centroids can be provided. If no centroids are provided, the global centroids `GLB_NatID_grid_0360as_adv_2.mat` are used (as explained in [Centroids class](Hands-on_III.ipynb#Centroids-class)). The method used to calculate the wind gusts (the hazard intensity) can also be configured. The default (and only implemented up to now) is the method of Holland 2008."
    ]
@@ -492,9 +528,9 @@
    "source": [
     "### EXERCISE\n",
     "\n",
-    "* Build a `TropCyclone` instance from the \"test/trac_brb_test.csv\" file. \n",
-    "* Plot the track.\n",
-    "* Print the date of the event."
+    "* Build a `TropCyclone` instance from the previous tracks over Barbados. \n",
+    "* Plot the track's intensity of event 1951239N12334.\n",
+    "* Print the date of the synthetic event 1951239N12334_gen5."
    ]
   },
   {
@@ -503,9 +539,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "from climada import SOURCE_DIR\n",
-    "BRB_TRACK = os.path.join(SOURCE_DIR, 'hazard/test/data', 'trac_brb_test.csv')\n",
     "# Put your code here:\n",
     "\n",
     "\n",
@@ -519,68 +552,17 @@
    "outputs": [],
    "source": [
     "# SOLUTION:\n",
-    "import os\n",
-    "from climada import SOURCE_DIR\n",
-    "BRB_TRACK = os.path.join(SOURCE_DIR, 'hazard/test/data', 'trac_brb_test.csv')\n",
     "\n",
-    "# When setting a tropical cyclone from a track, this can not be done at contruction\n",
     "tc_haz_brb = TropCyclone()\n",
-    "tc_haz_brb.set_from_tracks(BRB_TRACK) # Default global centroids are used, which makes it slower\n",
+    "tc_haz_brb.set_from_tracks(tc_track_brb) # Default global centroids are used, which makes it slower\n",
     "\n",
-    "# Plotting track\n",
-    "tc_haz_brb.plot_tracks()\n",
+    "# Plotting the event with id 1\n",
+    "tc_haz_brb.plot_intensity('1951239N12334')\n",
     "\n",
     "# The start date of the events are stored in the Hazard.date variable (without time).\n",
     "# To change from ordinal format to date, we can use the datetime package\n",
     "import datetime as dt\n",
-    "print('Date:', tc_haz_brb.get_event_date())\n",
-    "# Since we also have the track information, we can check it in the tracks Dataset\n",
-    "print('Date and time:', tc_haz_brb.tracks[0].time[0].values)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### EXERCISE\n",
-    "\n",
-    "Generate an ensamble of 9 synthetic events from the \"test/trac_brb_test.csv\" track. Use the centroids of barbados in \"test/centr_brb_test.mat\". Plot them all."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Put your code here\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# SOLUTION:\n",
-    "import os\n",
-    "from climada import SOURCE_DIR, Centroids\n",
-    "BRB_CENT = os.path.join(SOURCE_DIR, 'hazard/centroids/test/data', 'centr_brb_test.mat')\n",
-    "BRB_TRACK = os.path.join(SOURCE_DIR, 'hazard/test/data', 'trac_brb_test.csv')\n",
-    "\n",
-    "cent_brb = Centroids(BRB_CENT)\n",
-    "\n",
-    "tc_haz_brb = TropCyclone()\n",
-    "tc_haz_brb.set_from_tracks(BRB_TRACK, centroids=cent_brb)\n",
-    "tc_haz_brb.set_random_walk(ens_size=9)\n",
-    "# Check that the data is consistent\n",
-    "tc_haz_brb.check()\n",
-    "print('Total number of events:', tc_haz_brb.event_id.size)\n",
-    "print('Total number of tracks:', len(tc_haz_brb.tracks))\n",
-    "tc_haz_brb.plot_tracks()"
+    "print('Date:', tc_haz_brb.get_event_date('1951239N12334_gen5'))"
    ]
   },
   {
