update scripts + add one for black marble.

--- a/script/workshop_I/Hands-on_II.ipynb
+++ b/script/workshop_I/Hands-on_II.ipynb
@@ -451,15 +451,10 @@
    "outputs": [],
    "source": [
     "imp_fun.intensity = np.array([0, 1])\n",
-    "imp_fun.check()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "try:\n",
+    "    imp_fun.check()\n",
+    "except ValueError:\n",
+    "    print('Error caught')\n",
     "# put the correct value of the intensity again\n",
     "imp_fun.intensity = np.linspace(0, 100, num=15)"
    ]
@@ -740,6 +735,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# SOLUTION:\n",
     "imp_fun.plot()"
    ]
   },
