--- a/script/workshop_I/Hands-on_III.ipynb
+++ b/script/workshop_I/Hands-on_III.ipynb
@@ -322,7 +322,7 @@
    "source": [
     "## Back to Exposures\n",
     "\n",
-    "Just like with the `ImpactFuncSet` class, `Exposures` can be filled at instantiation or with the `read()` method. A warning appears for every optional variable that has not been filled. The default logging level shown is INFO. To modify the logging level or other configuration parameters, generate a `climada.conf` file with the same structure as the default `defaults.conf` file and locate it in the climada folder (see [Configuration options](https://github.com/davidnbresch/climada_python/blob/master/README.md)).\n",
+    "Just like with the `ImpactFuncSet` class, `Exposures` can be filled at instantiation or with the `read()` method. An info log appears for every optional variable that has not been filled. The default minimum logging level shown is INFO. To modify the logging level or other configuration parameters, generate a `climada.conf` file with the same structure as the default `defaults.conf` file and locate it in the climada folder (see [Configuration options](https://github.com/davidnbresch/climada_python/blob/master/README.md)).\n",
     "\n",
     "Exposures contains a `tag` variable which contains the file name(s) loaded and description(s) of each, if a description is provided."
    ]
@@ -433,7 +433,10 @@
     "from climada import DATA_DIR # folder containing all the test and demo data\n",
     "WS_EXP = DATA_DIR + '/demo/WS_Europe.xls'\n",
     "\n",
-    "exp_eu = Exposures(WS_EXP)"
+    "try:\n",
+    "    exp_eu = Exposures(WS_EXP)\n",
+    "except KeyError:\n",
+    "    print('Error caught.')"
    ]
   },
   {
@@ -540,7 +543,7 @@
     "* admin0_name (str, optional): admin0 country name\n",
     "* admin0_iso3 (str, optional): admin0 ISO3 country name\n",
     "\n",
-    "The `coord` variable is the one containing the coordinates. Actually, it is an instance of the `Coordinate` class (defined in the `util` package), which manages if the grid is regular or irregular. The regular implementation is not implemented yet and `coord` can be simply used a 2d numpy array.\n",
+    "The `coord` variable is the one containing the coordinates. Actually, it is an instance of the `GridPoints` class (defined in the `util` package), which offers additional functionalities as checking if a grid is regular or not. `coord` can be simply used a 2d numpy array.\n",
     "\n",
     "Climada classes can read different file formats. To check which ones, execute the function `get_sup_file_format()`. This method can be executed on the class directly, since it's a static mathod:"
    ]
@@ -602,7 +605,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When computing the impacts, the values defined at `Exposures` are interpolated to the `Centroids` coordinates. This is done with the `assign()` method of the Exposures. Currently the resampling of one grid to the other can be done with two different metrics and one method, the nearest neighbor:"
+    "When computing the impacts, the values defined at `Exposures` are interpolated to the `Centroids` coordinates. This is done with the `assign()` method of the Exposures. Currently climada supports the nearest neighbor implementation with two different distances:"
    ]
   },
   {
@@ -621,9 +624,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `approx` implementation works fast for small amount of data, whilst `haversine` is faster for large amount of data. The same operation can be done at lower level, between coordinates using the `Coordinates` `resample()` method.\n",
+    "The `approx` implementation works fast for small amounts of data, whilst `haversine` is faster for large amounts of data. `haversine` is used in most of the cases, as for instance in the `assign()` method.\n",
     "\n",
-    "The Earth centroids `GLB_CENTROIDS_MA` contains 1.656.093 points, and the European entities for winter storms contain 6.187 points. Let's measure how much time it takes to compute the nearest neighbors:"
+    "The Earth centroids `GLB_CENTROIDS_MAT` contains 1.656.093 points, and the European entities for winter storms contain 6.187 points. Let's measure how much time it takes to compute the nearest neighbors:"
    ]
   },
   {
@@ -637,7 +640,7 @@
     "import time\n",
     "time0 = time.time()\n",
     "# The results are the closest centroids indexes for each exposure\n",
-    "interp_val = glb_cent.coord.resample(exp_eu.coord, distance='haversine')\n",
+    "interp_val = glb_cent.coord.resample_nn(exp_eu.coord)\n",
     "timef = time.time()\n",
     "print('The resampling took', timef - time0, 'seconds')\n",
     "print('Result size:', interp_val.size)\n",
