do not plot zero values as default

--- a/script/tutorial/Hands-on_I.ipynb
+++ b/script/tutorial/Hands-on_I.ipynb
@@ -132,7 +132,7 @@
     "\n",
     "ent_fl.exposures = Exposures(ENT_FL_MAT)\n",
     "ent_fl.exposures.value_unit = 'USD'      # fill missing ('NA') value unit \n",
-    "ent_fl.exposures.plot(ignore_null=True); # plot removing 0 values"
+    "ent_fl.exposures.plot();"
    ]
   },
   {
