--- a/script/tutorial/Hands-on_V.ipynb
+++ b/script/tutorial/Hands-on_V.ipynb
@@ -19,9 +19,9 @@
     "\n",
     "The night light images used are the following:\n",
     "- year 2012 and 2016: https://earthobservatory.nasa.gov/Features/NightLights (15 arcsec resolution (~500m))\n",
-    "- from 1992 until 2013 (except 2012): https://ngdc.noaa.gov/eog/dmsp/downloadV4composites.html (30 arcsec resolution (~1km))\n",
+    "- from 1992 until 2013: https://ngdc.noaa.gov/eog/dmsp/downloadV4composites.html (30 arcsec resolution (~1km))\n",
     "\n",
-    "All the other years use the night lights of the closest available year.\n",
+    "By default, for years higher than 2013 the NASA images are used, whilst for 2013 and earlier years the NOAA ones are considered. However, there is a flag which allows to choose the closest NASA or NOAA images.\n",
     "\n",
     "Regarding the GDP and income group values, they are obtained from the [World Bank](https://data.worldbank.org) using the [pandas-datareader](https://pandas-datareader.readthedocs.io/en/latest/remote_data.html) API. If a value is missing, the value of the closest year is considered. When no values are provided from the World Bank, we use the [Natural Earth](https://www.naturalearthdata.com) repository values.\n",
     "\n",
@@ -57,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sea points can be added with the desired resolution. Its value will be 0."
+    "Sea points can be added with the desired resolution. Their value will be 0."
    ]
   },
   {
@@ -96,7 +96,7 @@
    "outputs": [],
    "source": [
     "chn = BlackMarble()\n",
-    "chn.set_countries(['China'], 2013, res_km=10.0)\n",
+    "chn.set_countries(['China'], 2013, res_km=5.0)\n",
     "chn.plot(buffer_deg=0, gridsize=200)"
    ]
   },
@@ -115,9 +115,18 @@
    "source": [
     "hkg = BlackMarble()\n",
     "try:\n",
-    "    hkg.set_countries(['Hong Kong'], 2013, res_km=0.5)\n",
+    "    hkg.set_countries(['Hong Kong'], 2016, res_km=0.5)\n",
     "except ValueError:\n",
-    "    print('Error caught.')"
+    "    print('Error caught.')\n",
+    "    hkg.set_countries(['Hong Kong S.A.R.'], 2016, res_km=0.2)\n",
+    "    hkg.plot(buffer_deg=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The GDP and income group can be given as inputs:"
    ]
   },
   {
@@ -126,9 +135,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hkg = BlackMarble()\n",
-    "hkg.set_countries(['Hong Kong S.A.R.'], 2013, res_km=0.2)\n",
-    "hkg.plot(buffer_deg=0)"
+    "dc = BlackMarble()\n",
+    "dc.set_countries(['Argentina', 'Uruguay'], 2013, res_km=1.0, gdp={'ARG': 5e11, 'URY': 5e10}, inc_grp={'ARG': 3, 'URY': 4})\n",
+    "dc.plot(ignore_zero=False, pop_name=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, also provinces can be modelled from the previous computations as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "country_name = {'Germany': ['Berlin', 'Brandenburg', 'Bayern', 'Sachsen', 'Thüringen', 'Sachsen-Anhalt'],\n",
+    "                'Czechia': ['Prague', 'Karlovarský', 'Ústecký', 'Liberecký', 'Středočeský', 'Plzeňský', 'Jihočeský']}\n",
+    "\n",
+    "ent = BlackMarble()\n",
+    "ent.set_countries(country_name, 2012, res_km=1.0, from_hr=True)\n",
+    "\n",
+    "from matplotlib import colors\n",
+    "norm=colors.LogNorm(vmin=1.0e6, vmax=1.0e10)\n",
+    "ent.plot(ignore_zero=True, buffer_deg=0, norm=norm)"
    ]
   }
  ],
