--- a/script/tutorial/Hands-on_V.ipynb
+++ b/script/tutorial/Hands-on_V.ipynb
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With the next commands, we can model Iran and Turkey in the years 1992 and 2013 with the default resolution ~1km."
+    "With the next commands, we can model Iran and Turkey in the years 1992 and 2013 with the default resolution of ~1km."
    ]
   },
   {
@@ -51,24 +51,6 @@
     "irn_tur = BlackMarble()\n",
     "irn_tur.set_countries(['Iran', 'Turkey'], 2013, res_km=1.0)\n",
     "irn_tur.plot(buffer_deg=0)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Sea points can be added with the desired resolution. Their value will be 0."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "aus = BlackMarble()\n",
-    "aus.set_countries(['Australia'], 2013, res_km=2.0, sea_res=(200, 50))\n",
-    "aus.plot(buffer_deg=0)"
    ]
   },
   {
@@ -104,6 +86,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Sea points can be added with the desired resolution. Their value will be 0."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aus = BlackMarble()\n",
+    "aus.set_countries(['Australia'], 2013, res_km=2.0, sea_res=(200, 50))\n",
+    "aus.plot(buffer_deg=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "If you don't write the country name right, the error log will provide you with possible similar options."
    ]
   },
@@ -126,7 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The GDP and income group can be given as inputs:"
+    "The GDP and income group can be given as inputs."
    ]
   },
   {
@@ -135,9 +135,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dc = BlackMarble()\n",
-    "dc.set_countries(['Argentina', 'Uruguay'], 2013, res_km=1.0, gdp={'ARG': 5e11, 'URY': 5e10}, inc_grp={'ARG': 3, 'URY': 4})\n",
-    "dc.plot(ignore_zero=False, pop_name=False)"
+    "au = BlackMarble()\n",
+    "au.set_countries(['Argentina', 'Uruguay'], 2013, res_km=1.0, gdp={'ARG': 5e11, 'URY': 5e10}, inc_grp={'ARG': 3, 'URY': 4})\n",
+    "au.plot(ignore_zero=False, pop_name=False)"
    ]
   },
   {
