add sea points in plot

--- a/script/tutorial/Hands-on_V.ipynb
+++ b/script/tutorial/Hands-on_V.ipynb
@@ -97,7 +97,7 @@
    "source": [
     "aus = BlackMarble()\n",
     "aus.set_countries(['Australia'], 2013, res_km=2.0, sea_res=(200, 50))\n",
-    "aus.plot(buffer_deg=0)"
+    "aus.plot(buffer_deg=0, ignore_zero=False)"
    ]
   },
   {
@@ -115,7 +115,7 @@
    "source": [
     "hkg = BlackMarble()\n",
     "try:\n",
-    "    hkg.set_countries(['Hong Kong'], 2016, res_km=0.5)\n",
+    "    hkg.set_countries(['Hong Kong'], 2016, res_km=0.2)\n",
     "except ValueError:\n",
     "    print('Error caught.')\n",
     "    hkg.set_countries(['Hong Kong S.A.R.'], 2016, res_km=0.2)\n",
