remove unnecessary flag

--- a/script/tutorial/Hands-on_V.ipynb
+++ b/script/tutorial/Hands-on_V.ipynb
@@ -161,7 +161,7 @@
     "\n",
     "from matplotlib import colors\n",
     "norm=colors.LogNorm(vmin=1.0e6, vmax=1.0e10)\n",
-    "ent.plot(ignore_zero=True, buffer_deg=0, norm=norm)"
+    "ent.plot(buffer_deg=0, norm=norm)"
    ]
   }
  ],
