add equal scale

--- a/script/tutorial/Hands-on_I.ipynb
+++ b/script/tutorial/Hands-on_I.ipynb
@@ -14,18 +14,24 @@
    "metadata": {},
    "source": [
     "The functionality of climada is gathered in the following classes:\n",
-    "* Entity: socio-economic models/data\n",
+    "* Entity: socio-economic models\n",
     "  * Exposures: exposed values\n",
+    "    * BlackMarble: regional economic model from nightlight intensities and economic indicators (GDP, income group)\n",
     "  * ImpactFuncSet: collection of impact functions per hazard\n",
-    "  * DiscRates: discount rates\n",
+    "  * DiscRates: discount rates per year\n",
     "  * MeasureSet: collection of measures for adaptation\n",
-    "* Hazard: meteorological models/data\n",
-    "  * TropCyclone: tropical cyclone hazards\n",
-    "* Impact: impact results\n",
+    "* Hazard: meteorological models\n",
+    "  * TropCyclone: tropical cyclone events\n",
+    "* Impact: impacts of the Hazard and Entity interaction.\n",
     "\n",
-    "Currently climada is able to read and load data of files containing the already modelled data (as for instance products of the climada MATLAB code), to visualize those and perform some basic analysis, and to compute the impact. Climada in Python can also model tropical cyclones from the IBTrACS tracks repository and generate probabilistic ones.\n",
+    "Using these classes, currently climada is able to:\n",
+    "* read files containing already modelled data, as for instance products of the climada MATLAB code. \n",
+    "* visualize and analyse the meteorological and socio-economic data.\n",
+    "* compute the socio-economic impact of the natural catastrophe events. \n",
+    "* model tropical cyclones from the [IBTrACS](https://www.ncdc.noaa.gov/ibtracs/) tracks repository and generate synthetic ones.\n",
+    "* model country or regional exposures using the black marble approximation.\n",
     "\n",
-    "After the installation of climada, and with the climada_env virtual environment activated (if using virutal environments), some of climada classes, functions and constants are directly ready to import. For developers: they are the ones which are defined inside the \\__all\\__ command on top of each climada module."
+    "After the installation of climada, and with the climada_env virtual environment activated, some of climada's classes, functions and constants are directly ready to import."
    ]
   },
   {
@@ -101,7 +107,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `disc_rates` attribute is of type `DiscRates` and it simply contains the discount rates for every year, currently:"
+    "The `disc_rates` attribute is of type `DiscRates` and it simply contains the discount rates for every year:"
    ]
   },
   {
@@ -119,7 +125,7 @@
    "source": [
     "Finally, the `exposures` attribute contains geolocalized values of anything exposed to the hazard, let it be monetary value of assets or number of human lifes, for example. It is of type `Exposures`. \n",
     "\n",
-    "In this case, we want to fix the exposures for the assets located in Florida. We will use the data in file `ENT_FL_MAT`."
+    "In this case, we want to fix the exposures for the assets located in Florida. We will use the data of the MATLAB file `ENT_FL_MAT`."
    ]
   },
   {
@@ -152,9 +158,9 @@
     "\n",
     "### Centroids\n",
     "\n",
-    "The centroids are the geographical coordinates where there is information about the hazard. Usually, the hazard events are interpolated to these coordinates. They can be defined through the class `Centroids`.\n",
+    "The `Centroids` class contains the geographical coordinates where the hazard is defined. A `Centroids` instance provides each coordinate with an id and can't contain two identical coordinates. \n",
     "\n",
-    "In this example, we will a grid that covers Florida and the hurricane Andrew. This can be something like that:"
+    "In this example, we will build a grid that covers Florida and the hurricane Andrew. This can be done like that:"
    ]
   },
   {
@@ -220,24 +226,13 @@
    "source": [
     "track_andrew = TCTracks()\n",
     "track_andrew.read_ibtracs_csv(TC_ANDREW_FL)\n",
-    "track_andrew.plot() # plot track"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Generate synthetic events\n",
-    "import time\n",
-    "time0 = time.time()\n",
+    "track_andrew.plot() # plot track\n",
+    "\n",
     "track_andrew.calc_random_walk(ens_size=12) # For every track, generate 12 synthetic\n",
-    "timef = time.time()\n",
-    "print('The synthetic track generation took', timef - time0, 'seconds')\n",
-    "track_andrew.equal_timestep()\n",
-    "track_andrew.plot()\n",
-    "print('Number of tracks:', track_andrew.size)"
+    "print('Number of tracks:', track_andrew.size)\n",
+    "\n",
+    "track_andrew.equal_timestep() # Generate equally distributed points\n",
+    "track_andrew.plot()"
    ]
   },
   {
@@ -255,7 +250,7 @@
    "source": [
     "tc_andrew = TropCyclone() # instance TropCyclone\n",
     "tc_andrew.set_from_tracks(track_andrew, centroids=cent_fl) # set hazard from track file with given centroids\n",
-    "tc_andrew.plot_intensity(tc_andrew.event_name[0]); # plot intensity of one event"
+    "tc_andrew.plot_intensity(1); # plot intensity of one event"
    ]
   },
   {
@@ -280,7 +275,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are two events called `ANDREW` in Florida:"
+    "There are two events called `ANDREW` that took place in Florida:"
    ]
   },
   {
@@ -344,9 +339,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The impact of hazard events over an entity can be computed easily from the previously explained classes. By computing the impact for each event, the `Impact` class provides different risk measures, as the expected annual impact per exposure, the probable maximum impact for different return periods and the total average annual impact.\n",
+    "The impact of hazard events over an entity can be computed easily from the previously explained classes. By computing the impact for each event (historical and synthetic), the `Impact` class provides different risk measures, as the expected annual impact per exposure, the probable maximum impact for different return periods and the total average annual impact.\n",
     "\n",
-    "This is the impact of scenario ANDREW in Florida. We call scenario to the historical event and its synthetic reproductions. Analyzing the scenario instead of the single historical event enables to take into account the uncertainties of such events."
+    "This is the impact of scenario ANDREW in Florida. We call scenario to the historical event and its synthetic reproductions. Analyzing the scenario instead of the single historical events enables to take into account the uncertainties of such events."
    ]
   },
   {
@@ -527,9 +522,6 @@
     "\n",
     "# the strongest event\n",
     "haz_ws_eu.plot_intensity(-1) # might be better to use an other earth projection?\n",
-    "\n",
-    "# the hazard intensity maps for different return periods\n",
-    "haz_ws_eu.plot_intensity(centr=(47.38, 8.54))\n",
     "\n",
     "# the impact exceedence frequency curve\n",
     "imp_exc_curve = imp_ws_eu.calc_freq_curve()\n",
