--- a/script/tutorial/Hands-on_V.ipynb
+++ b/script/tutorial/Hands-on_V.ipynb
@@ -46,11 +46,11 @@
     "\n",
     "irn_tur = BlackMarble()\n",
     "irn_tur.set_countries(['Iran', 'Turkey'], 1992, res_km=1.0)\n",
-    "irn_tur.plot(buffer_deg=0)\n",
+    "irn_tur.plot(buffer_deg=0, vmin=1.0e8, vmax=2.5e9)\n",
     "\n",
     "irn_tur = BlackMarble()\n",
     "irn_tur.set_countries(['Iran', 'Turkey'], 2013, res_km=1.0)\n",
-    "irn_tur.plot(buffer_deg=0)"
+    "irn_tur.plot(buffer_deg=0, vmin=1.0e8, vmax=2.5e9)"
    ]
   },
   {
